--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -1,6 +1,6 @@
 
 % introductory paragraph
-\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being a favorite sport in many parts of the world into a respected industry, which is reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match of all European leagues in the season 2017/18. Also in economic terms, football is synonymous with big business as the \textit{Bundesliga} ranks second in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. Due to their great popularity, professional football matches generate external effects in many regards. On the positive side, there is higher consumer spending (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, and a higher frequency of accidents, among other things. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the 2017/18 season, the State and Federal Police force invested over 2.11 million working hours to ensure the spectators' safety at professional football matches in Germany \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) regarding the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches where social interactions lead to violence, but also deals with the question of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
+Football has grown from being a favorite sport in many parts of the world into a respected industry, which is reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match of all European leagues in the season 2017/18. Also in economic terms, football is synonymous with big business as the \textit{Bundesliga} ranks second in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. Due to their great popularity, professional football matches generate external effects in many regards. On the positive side, there is higher consumer spending (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, and a higher frequency of accidents, among other things. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the 2017/18 season, the State and Federal Police force invested over 2.11 million working hours to ensure the spectators' safety at professional football matches in Germany \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) regarding the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches where social interactions lead to violence, but also deals with the question of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
@@ -68,7 +68,7 @@ The empirical approach of this paper exploits the variation in the scheduling of
 \subsection{Football and Violent Crime}
 
 % ULTRAS & HOOLIGANS
-Spectator violence has a long tradition in the context of professional football in Germany. The change in names for football fans illustrates that spectator behavior has changed considerably \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was refereed to as \textit{camp-followers}, while one decade later the first problems of spectator violence emerged with the so-called \textit{football rowdies}. In the 1980s, spectator violence was omnipresent, mainly due to the hooligan movement. Since the late 1990s, a new group has appeared in the stadiums, the \textit{ultras}. Originally from Italy, the \textit{ultras}are dedicated to fighting the commercialization of football and to revitalizing traditional football culture. Over the last years, the number of violent fans has been increasing. The police distinguish between three types of football fans. Category A includes peaceful fans, category B consists of fans inclined to violence, and category C contains fans who actively seek violence (violent criminals). Originally, the \textit{ultras} were predominantly assigned to category A and occasionally to category B. Recently, however, a substantial share of the \textit{ultras} has been classified as members of categories B and C. In the season 2017/18, for instance, the \cite{zis17_18} identified 13.633 individuals in the top three leagues who were either prone to violence or seeking violence. With more potential agitators, police officers report more aggression directed at them \citep{feltes2010fussballgewalt}. However, it is not only the growing number of violent fans that is a problem, but also the fact that the event character of violence during football games is increasing \citep{pilz2005kuttenfan}. Violent actions are less and less connected with the events on the playing field. In fact, violence serves as an opportunity for identification in the search for one's identity. Some violent fans find self-assertion by joining like-minded individuals to discover their strength. The question is how to address the challenges posed by \textit{hooligans} and \textit{ultras}. \cite{poutvaara2009police} investigate the impact of anti-hooliganism policy in the Swedish context. They find that the assignment of other duties to the Sport Intelligence and Tactical Unit was accompanied by an increase in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks from spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on the types of violent fans the police are confronted with, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, a zero-tolerance policy must be applied to \textit{hooligans} and any failure to take drastic measures is seen as an invitation to act out violent desires. On the other hand, \textit{ultras} should be given some leeway to allow self-regulation.} 
+Spectator violence has a long tradition in the context of professional football in Germany. The change in names for football fans illustrates that spectator behavior has changed considerably \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was refereed to as \textit{camp-followers}, while one decade later the first problems of spectator violence emerged with the so-called \textit{football rowdies}. In the 1980s, spectator violence was omnipresent, mainly due to the hooligan movement. Since the late 1990s, a new group has appeared in the stadiums, the \textit{ultras}. Originally from Italy, the \textit{ultras} are dedicated to fighting the commercialization of football and to revitalizing traditional football culture. Over the last years, the number of violent fans has been increasing. The police distinguish between three types of football fans. Category A includes peaceful fans, category B consists of fans inclined to violence, and category C contains fans who actively seek violence (violent criminals). Originally, the \textit{ultras} were predominantly assigned to category A and occasionally to category B. Recently, however, a substantial share of the \textit{ultras} has been classified as members of categories B and C. In the season 2017/18, for instance, the \cite{zis17_18} identified 13.633 individuals in the top three leagues who were either prone to violence or seeking violence. With more potential agitators, police officers report more aggression directed at them \citep{feltes2010fussballgewalt}. However, it is not only the growing number of violent fans that is a problem, but also the fact that the event character of violence during football games is increasing \citep{pilz2005kuttenfan}. Violent actions are less and less connected with the events on the playing field. In fact, violence serves as an opportunity for identification in the search for one's identity. Some violent fans find self-assertion by joining like-minded individuals to discover their strength. The question is how to address the challenges posed by \textit{hooligans} and \textit{ultras}. \cite{poutvaara2009police} investigate the impact of anti-hooliganism policy in the Swedish context. They find that the assignment of other duties to the Sport Intelligence and Tactical Unit was accompanied by an increase in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks from spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on the types of violent fans the police are confronted with, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, a zero-tolerance policy must be applied to \textit{hooligans} and any failure to take drastic measures is seen as an invitation to act out violent desires. On the other hand, \textit{ultras} should be given some leeway to allow self-regulation.} 
 
 
 
@@ -326,7 +326,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 % Placebo games
-\textbf{Placebo Games.---}I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
+\textbf{Placebo Games.---}I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Note that the t-statistics of the preferred specification in Table \ref{tab_soc_ext:reg_fe_assrate} (2.677/0.284=9.43) is almost 2.5 times higher than the largest observed value in any of the 10,000 simulations. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
 
 
 
